--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,1 +1,12 @@
-<div id="firebaseui-auth-container"></div>
+<div class="login-container" [style.visibility]="showWindow ? 'visible' : 'hidden'">
+  <div class="login-content">
+    <div class="login-message">
+    <h2>Welcome to <span class="logo-font">Budget Buddy!</span></h2>
+    <p>Sign in to access your own personalized budgeting dashboard.</p>
+    </div>
+    <div class="firebaseui-container">
+      <h3>Select Your Option</h3>
+      <div id="firebaseui-auth-container"></div>
+    </div>
+  </div>
+</div>
