--- a/frontend/src/app/login/login.component.less
+++ b/frontend/src/app/login/login.component.less
@@ -1,1 +1,73 @@
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  background-color: #f2f2f2;
+}
 
+.login-content {
+  padding: 20px 20px 40px 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  text-align: center;  // Center the text
+}
+
+.login-message {
+  padding: 10px;
+  width: 20em;
+}
+
+.logo-font {
+  font-family: 'Sriracha', cursive;
+}
+
+h2 {
+  margin-bottom: 10px;
+  font-size: 24px;
+  color: #333;
+}
+
+p {
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #777;
+}
+
+.firebaseui-container {
+  padding: 20px;
+  background: linear-gradient(145deg, #f5f5f5, #e1e1e1);
+  border-radius: 8px;
+  text-align: center;
+
+  h3 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    color: #555;
+  }
+}
+
+#firebaseui-auth-container {
+  .firebaseui-info-bar {
+    margin-top: 20px;
+  }
+
+  .mdl-shadow--2dp {
+    box-shadow: none;
+  }
+
+  .mdl-progress {
+    height: 5px;
+  }
+
+  div.mdl-progress::after {
+    color: black;
+    content: 'Authenticating';
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+  }
+}
