--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="login-container" [style.visibility]="showWindow ? 'visible' : 'hidden'">
+<div [style.visibility]="showWindow ? 'visible' : 'hidden'" class="login-container">
   <div class="login-content">
     <div class="login-message">
-    <h2>Welcome to <span class="logo-font">Budget Buddy!</span></h2>
-    <p>Sign in to access your own personalized budgeting dashboard.</p>
+      <h2>Welcome to <span class="logo-font">Budget Buddy!</span></h2>
+      <p>Sign in to access your own personalized budgeting dashboard.</p>
     </div>
     <div class="firebaseui-container">
       <h3>Select Your Option</h3>
