--- a/frontend/src/app/nav-panel/nav-panel.component.html
+++ b/frontend/src/app/nav-panel/nav-panel.component.html
@@ -5,22 +5,22 @@
     <ul>
       <li>
         <a (click)="navigate('/dashboard')" class="active">
-          <i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard
+          <i aria-hidden="true" class="fa fa-tachometer"></i> Dashboard
         </a>
       </li>
       <li>
         <a (click)="navigate('/ledger')">
-          <i class="fa fa-book" aria-hidden="true"></i> Ledger
+          <i aria-hidden="true" class="fa fa-book"></i> Ledger
         </a>
       </li>
       <li>
         <a (click)="navigate('/spending')">
-          <i class="fa fa-money" aria-hidden="true"></i> Spending Habits
+          <i aria-hidden="true" class="fa fa-money"></i> Spending Habits
         </a>
       </li>
       <li>
         <a (click)="navigate('/alerts')">
-          <i class="fa fa-bell" aria-hidden="true"></i> Alerts
+          <i aria-hidden="true" class="fa fa-bell"></i> Alerts
         </a>
       </li>
     </ul>
