--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="header-container">
     <header class="header">
       <h1 class="logo">Budget Buddy</h1>
-      <button *ngIf="showLogin" class="login-btn" (click)="login()">Login</button>
-      <button *ngIf="showLogout" class="login-btn" (click)="logout()">Logout</button>
+      <button (click)="login()" *ngIf="showLogin" class="login-btn">Login</button>
+      <button (click)="logout()" *ngIf="showLogout" class="login-btn">Logout</button>
     </header>
   </div>
   <div class="content">
