--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'node_modules/@swimlane/ngx-datatable/themes/material.css';
+@import 'node_modules/@swimlane/ngx-datatable/assets/icons.css';
 @import 'firebaseui/dist/firebaseui.css';
 @import 'node_modules/typeface-sriracha/index.css';
 
@@ -21,4 +22,17 @@ nav, footer, header, section, summary, mark, audio, video {
   border: 0;
   margin: 0;
   padding: 0;
+}
+
+// Use a prettier color for fade in on ngx-datatable
+.ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover, .ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover .datatable-row-group {
+  background-color: rgb(148, 205, 156) !important;
+  transition-property: background;
+  transition-duration: 0.3s;
+  transition-timing-function: linear;
+}
+
+// also, add our own striping
+.datatable-row-odd {
+  background: rgb(238, 238, 238) !important;
 }
