Add create/retrieve routes for ledger + UI integration

--- a/frontend/src/app/shared/components/nav-panel/nav-panel.component.html
+++ b/frontend/src/app/shared/components/nav-panel/nav-panel.component.html
@@ -4,22 +4,22 @@
   <aside class="sidebar">
     <ul>
       <li>
-        <a (click)="navigate('/dashboard')" class="active">
+        <a (click)="navigate('/home/dashboard')" class="active">
           <i aria-hidden="true" class="fa fa-tachometer"></i> Dashboard
         </a>
       </li>
       <li>
-        <a (click)="navigate('/ledger')">
+        <a (click)="navigate('/home/ledger')">
           <i aria-hidden="true" class="fa fa-book"></i> Ledger
         </a>
       </li>
       <li>
-        <a (click)="navigate('/spending')">
+        <a (click)="navigate('/home/spending')">
           <i aria-hidden="true" class="fa fa-money"></i> Spending Habits
         </a>
       </li>
       <li>
-        <a (click)="navigate('/alerts')">
+        <a (click)="navigate('/home/alerts')">
           <i aria-hidden="true" class="fa fa-bell"></i> Alerts
         </a>
       </li>
