--- a/frontend/src/app/ledger/components/ledger/ledger.component.less
+++ b/frontend/src/app/ledger/components/ledger/ledger.component.less
@@ -18,3 +18,28 @@
   padding: 20px 0;
 }
 
+/* CSS for the spinner */
+.spinner-box {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner {
+  border-top: 8px solid #3498db; /* Blue */
+  border-right: 8px solid #3498db; /* Blue */
+  border-left: 8px solid #3498db; /* Blue */
+  border-bottom: 8px solid #f3f3f3;   /* Light grey */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
