--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -1,28 +1,8 @@
+@import 'reset.less';
 @import 'node_modules/@swimlane/ngx-datatable/themes/material.css';
 @import 'node_modules/@swimlane/ngx-datatable/assets/icons.css';
 @import 'firebaseui/dist/firebaseui.css';
 @import 'node_modules/typeface-sriracha/index.css';
-
-html, body {
-  border: 0;
-  font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  height: 100vh;
-  width: 100vw;
-}
-
-div, span, object, iframe, img, table, caption, thead, tbody,
-tfoot, tr, tr, td, article, aside, canvas, details, figure, hgroup, menu,
-nav, footer, header, section, summary, mark, audio, video {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
 
 // Use a prettier color for fade in on ngx-datatable
 .ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover, .ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover .datatable-row-group {
