Minor styling changes

--- a/frontend/src/app/home/components/landing-page/landing-page.component.less
+++ b/frontend/src/app/home/components/landing-page/landing-page.component.less
@@ -26,12 +26,16 @@
   background-color: #f9f9f9;
   padding: 40px;
   text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 
 .outro {
   background-color: #f9f9f9;
   padding: 10px 40px;
   text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
 }
 
 .features {
@@ -46,4 +50,5 @@
   background-color: #f9f9f9;
   border-radius: 5px;
   text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
