--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -4,6 +4,10 @@
 @import 'firebaseui/dist/firebaseui.css';
 @import 'node_modules/typeface-sriracha/index.css';
 
+body {
+  background: #dddddd;
+}
+
 // Use a prettier color for fade in on ngx-datatable
 .ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover, .ngx-datatable.material:not(.cell-selection) .datatable-body-row:hover .datatable-row-group {
   background-color: rgb(148, 205, 156) !important;
