--- a/frontend/src/app/shared/components/nav-panel/nav-panel.component.less
+++ b/frontend/src/app/shared/components/nav-panel/nav-panel.component.less
@@ -9,7 +9,7 @@
   //background-color: #00682B; /* jade/money green */
   background-color: #333733;
   padding: 20px 0;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); /* subtle shadow for depth */
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2); /* subtle shadow for depth */
 }
 
 .sidebar ul {
@@ -45,5 +45,5 @@
 .main-content {
   flex-grow: 1; /* makes the main content grow to fill the remaining space */
   padding: 20px;
-  background-color: #f2f2f2; /* light gray background */
+  background-color: #dddddd; /* light gray background */
 }
