--- a/frontend/src/app/ledger/components/ledger/ledger.component.less
+++ b/frontend/src/app/ledger/components/ledger/ledger.component.less
@@ -1,20 +1,8 @@
-.ledger-filter {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 10px 0;
-  border-bottom: 1px solid #ccc;
-
-  label {
-    margin-right: 8px;
-  }
-}
-
-.date-input {
-  margin-left: 15px;
-}
-
 .ledger-display {
   padding: 20px 0;
+}
+
+.overflow {
+  overflow: auto;
 }
 
