--- a/frontend/src/app/ledger/components/quickbar/quickbar.component.less
+++ b/frontend/src/app/ledger/components/quickbar/quickbar.component.less
@@ -1,6 +1,8 @@
 .ledger-quickbar {
   display: flex;
   justify-content: space-between;
+  flex-grow: 0;
+  flex-basis: auto;
+  flex-wrap: nowrap;
   padding: 10px;
-  border-bottom: 1px solid #ccc;
 }
