Add styling for quickbar

--- a/frontend/src/app/ledger/components/ledger-page/ledger-page.component.less
+++ b/frontend/src/app/ledger/components/ledger-page/ledger-page.component.less
@@ -32,11 +32,12 @@
 }
 
 .top-bar {
-  flex-shrink: 2;
+  flex-shrink: 1;
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: end;
   border-bottom: 1px solid #ccc;
 }
 
