--- a/frontend/src/app/ledger/components/quickbar/quickbar.component.less
+++ b/frontend/src/app/ledger/components/quickbar/quickbar.component.less
@@ -1,8 +1,24 @@
 .ledger-quickbar {
-  display: flex;
-  justify-content: space-between;
-  flex-grow: 0;
-  flex-basis: auto;
-  flex-wrap: nowrap;
-  padding: 10px;
+  > form {
+    display: grid;
+    grid-auto-columns: 1fr;
+    align-content: end;
+    justify-content: end;
+    gap: 0 5px;
+    padding: 4px;
+    > label {
+      max-height: 1.5em;
+    }
+    > button {
+      max-width: 80px;
+      padding: 8px 16px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      color: #fff;
+      background-color: #007BFF;
+      text-align: center;
+      transition: background-color 0.3s ease, color 0.3s ease; /* smooth transition for hover effect */
+    }
+  }
 }
