--- a/frontend/src/app/ledger/components/ledger-page/ledger-page.component.less
+++ b/frontend/src/app/ledger/components/ledger-page/ledger-page.component.less
@@ -1,8 +1,9 @@
 .ledger-page {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 100%;
+  padding: 20px;
+  height: calc(100% - 40px);
+  width: calc(100% - 40px);
 }
 
 /* CSS for the spinner */
