--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -8,3 +8,11 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.grabbing-cursor {
+  cursor: grabbing !important;
+}
+
+.mat-mdc-icon-button:hover .mat-mdc-button-persistent-ripple::before {
+  opacity: 0.2 !important;
+}
