Having some fun with descriptions prior to demo to friends

--- a/frontend/src/app/dashboard/components/widgets/recent-transactions/recent-transactions.component.html
+++ b/frontend/src/app/dashboard/components/widgets/recent-transactions/recent-transactions.component.html
@@ -2,8 +2,8 @@
   <fa-icon class="floating-icon" [icon]="faReceipt" size="2x"></fa-icon>
   <h4>Recent Transactions</h4>
   <ul>
-    <li><span class="tx-name">Transaction 1</span>: <span class="tx-pos-amount">$XX.XX</span></li>
-    <li><span class="tx-name">Transaction 2</span>: <span class="tx-neg-amount">-$XX.XX</span></li>
-    <li><span class="tx-name">Transaction 3</span>: <span class="tx-pos-amount">$XX.XX</span></li>
+    <li><span class="tx-name">Tribble Care</span>: <span class="tx-pos-amount">$XX.XX</span></li>
+    <li><span class="tx-name">X-Potions</span>: <span class="tx-neg-amount">-$XX.XX</span></li>
+    <li><span class="tx-name">Avocado Toast</span>: <span class="tx-pos-amount">$XX.XX</span></li>
   </ul>
 </div>
