Fix up frontend tests now that prototyping phase is over
Let this be yet another reminder to myself to start doing this earlier than
I think I should. Even now felt a little too late, even if it meant moving
a bit faster.

--- a/frontend/src/app/dashboard/components/widgets/alerts-notifications/alerts-notifications.component.less
+++ b/frontend/src/app/dashboard/components/widgets/alerts-notifications/alerts-notifications.component.less
@@ -29,7 +29,9 @@ ul {
   width: calc(100% - 32px);
   height: calc(100% - 32px);
 }
+
 .floating-icon {
+  color: #00ff00;
   position: absolute;
   top: 10px;
   right: 14px;
