--- a/frontend/src/app/dashboard/components/widgets/recent-transactions/recent-transactions.component.less
+++ b/frontend/src/app/dashboard/components/widgets/recent-transactions/recent-transactions.component.less
@@ -35,6 +35,7 @@ ul {
 }
 
 .floating-icon {
+  color: #009900;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -53,6 +54,7 @@ ul {
   color: #CC3300;
   font-weight: bold;
 }
+
 .tx-pos-amount {
   text-align: right;
   color: #33AA00;
