--- a/frontend/src/app/dashboard/components/widgets/polywidget/polywidget.component.less
+++ b/frontend/src/app/dashboard/components/widgets/polywidget/polywidget.component.less
@@ -44,6 +44,7 @@
   align-items: center;
   justify-content: center;
   --mdc-icon-button-icon-size: 16px !important;
+  //background: white;
 
   & > *[role=img] {
     width: 16px;
@@ -60,6 +61,9 @@
     width: 24px !important;
     height: 24px !important;
   }
+
+  background-color: white;
+  border: 2px outset black;
 }
 
 .trash-icon {
