--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -16,3 +16,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-mdc-icon-button:hover .mat-mdc-button-persistent-ripple::before {
   opacity: 0.2 !important;
 }
+
+:root {
+  --color-jade-green: #00A86B;
+  --mat-standard-button-toggle-selected-state-background-color: var(--color-jade-green);
+}
