--- a/frontend/src/app/ledger/components/quickbar/quickbar.component.html
+++ b/frontend/src/app/ledger/components/quickbar/quickbar.component.html
@@ -1,17 +1,24 @@
 <div class="ledger-quickbar">
-  <form (ngSubmit)="addEntry()">
-    <label for="amount" style="grid-column: 1 / span 1; grid-row: 1 / span 1;"> Amount </label>
-    <input currencyMask placeholder="Amount" [(ngModel)]="amount" name="amount" id="amount"
-           style="grid-column: 1 / span 1; grid-row: 2 / span 1;">
-    <label for="party" style="grid-column: 2 / span 1; grid-row: 1 / span 1;"> Party</label>
-    <input type="text" placeholder="Payor/Payee" [(ngModel)]="transactionParty" name="transactionParty" id="party"
-           style="grid-column: 2 / span 1; grid-row: 2 / span 1;">
-    <label for="date"  style="grid-column: 3 / span 1; grid-row: 1 / span 1;">Date</label>
-    <input type="date" [ngModel]="date | date:'yyyy-MM-dd'" (ngModelChange)="date = $event" name="date" id="date"  style="grid-column: 3 / span 1; grid-row: 2 / span 1;">
-    <label for="category" style="grid-column: 4 / span 1; grid-row: 1 / span 1;">Category</label>
-    <select [(ngModel)]="category" name="category" id="category" style="grid-column: 4 / span 1; grid-row: 2 / span 1;">
-      <option *ngFor="let cat of categories" [value]="cat">{{ cat }}</option>
-    </select>
-    <button type="submit" style="grid-column: 5 / span 1; grid-row: 2 / span 1;">Add</button>
-  </form>
+    <form (ngSubmit)="addEntry()">
+        <mat-button-toggle-group [(ngModel)]="txType" name="tx-type" aria-label="Transaction Type" id="tx-type"
+         style="grid-column: 1 / span 1; grid-row: 1 / span 2;">
+            <mat-button-toggle value="expense">Expense</mat-button-toggle>
+            <mat-button-toggle value="deposit">Deposit</mat-button-toggle>
+        </mat-button-toggle-group>
+        <label for="amount" style="grid-column: 2 / span 1; grid-row: 1 / span 1;">Amount</label>
+        <input currencyMask placeholder="Amount" [(ngModel)]="amount" name="amount" id="amount"
+               style="grid-column: 2 / span 1; grid-row: 2 / span 1;">
+        <label for="party" style="grid-column: 3 / span 1; grid-row: 1 / span 1;">Party</label>
+        <input type="text" placeholder="Payor/Payee" [(ngModel)]="transactionParty" name="transactionParty" id="party"
+               style="grid-column: 3 / span 1; grid-row: 2 / span 1;">
+        <label for="date" style="grid-column: 4 / span 1; grid-row: 1 / span 1;">Date</label>
+        <input type="date" [ngModel]="date | date:'yyyy-MM-dd'" (ngModelChange)="date = $event" name="date" id="date"
+               style="grid-column: 4 / span 1; grid-row: 2 / span 1;">
+        <label for="category" style="grid-column: 5 / span 1; grid-row: 1 / span 1;">Category</label>
+        <select [(ngModel)]="category" name="category" id="category"
+                style="grid-column: 5 / span 1; grid-row: 2 / span 1;">
+            <option *ngFor="let cat of categories" [value]="cat">{{ cat }}</option>
+        </select>
+        <button type="submit" style="grid-column: 6 / span 1; grid-row: 2 / span 1;">Add</button>
+    </form>
 </div>
