Move API to use Dinero-style object for currency + fix date-typing error

--- a/frontend/src/app/dashboard/components/widgets/charts-expenses-pie/charts-expenses-pie.component.html
+++ b/frontend/src/app/dashboard/components/widgets/charts-expenses-pie/charts-expenses-pie.component.html
@@ -1,3 +1,6 @@
 <div style="width: 100%; height:100%;">
-  <plotly-plot [data]="graph.data" [layout]="graph.layout" [config]="graph.frames"></plotly-plot>
+  <plotly-plot [data]="data"
+               [layout]="layout"
+               [config]="frameConfig"
+               [updateOnDataChange]="true"></plotly-plot>
 </div>
