--- a/frontend/src/app/ledger/components/ledger/ledger.component.html
+++ b/frontend/src/app/ledger/components/ledger/ledger.component.html
@@ -3,7 +3,7 @@
 <table mat-table [dataSource]="transactions" matSort matSortActive="date" matSortDirection="desc" matSortDisableClear>
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-    <td mat-cell *matCellDef="let tx"> {{tx.date}} </td>
+    <td mat-cell *matCellDef="let tx"> {{tx.date | date: 'YYYY-MM-dd'}} </td>
   </ng-container>
   <ng-container matColumnDef="transactionParty">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Party </th>
