Linting clean-up

--- a/frontend/src/app/ledger/components/ledger/ledger.component.html
+++ b/frontend/src/app/ledger/components/ledger/ledger.component.html
@@ -1,4 +1,5 @@
 <!-- Ledger Display -->
+<!--suppress JSDeprecatedSymbols, JSUnresolvedReference -->
 <div class="ledger-display">
 <table mat-table [dataSource]="transactions" matSort matSortActive="date" matSortDirection="desc" matSortDisableClear>
   <ng-container matColumnDef="date">
