--- a/frontend/src/app/dashboard/components/widgets/polywidget/polywidget.component.less
+++ b/frontend/src/app/dashboard/components/widgets/polywidget/polywidget.component.less
@@ -39,7 +39,7 @@
 .trash-me {
   width: 24px !important;
   height: 24px !important;
-  padding: 0px !important;
+  padding: 0 !important;
   display: inline-flex !important;
   align-items: center;
   justify-content: center;
