Extract loading spinner for use in dashboard widgets

--- a/frontend/src/app/dashboard/components/widgets/charts-expenses-pie/charts-expenses-pie.component.html
+++ b/frontend/src/app/dashboard/components/widgets/charts-expenses-pie/charts-expenses-pie.component.html
@@ -1,6 +1,9 @@
-<div style="width: 100%; height:100%;">
-  <plotly-plot [data]="data"
-               [layout]="layout"
-               [config]="frameConfig"
-               [updateOnDataChange]="true"></plotly-plot>
-</div>
+<app-loading-spinner *ngIf="this.loading"></app-loading-spinner>
+<ng-container *ngIf="!this.loading">
+    <div style="width: 100%; height:100%;">
+        <plotly-plot [data]="data"
+                     [layout]="layout"
+                     [config]="frameConfig"
+                     [updateOnDataChange]="true"></plotly-plot>
+    </div>
+</ng-container>
